# ditalini

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  pyproject.toml  setup.py
.github/workflows/: pip.yml  python-package.yml  python-publish.yml  wheels.yml
app/: main.cpp
cmake/: CodeCoverage.cmake  Colors.cmake  ConfigSafeGuards.cmake  Doctest.cmake  Documentation.cmake  DynamicVersion.cmake  FindClangFormat.cmake  LTO.cmake  Misc.cmake  VersionFromGit.cmake  Warnings.cmake  clang-format.cmake
doc/: Doxyfile.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: example_square.cpp
include/: ditalini.h  ditaliniConfig.h.in
python/ditalini/: README.md  __init__.py  ditalini_ext.cpp
python/ditalini/ditalini/: ditalini.cpp
python/ditalini/examples/: example_square.py
python/ditalini/test/: test_square.py
src/: CMakeLists.txt  ditalini.cpp  ditalini.h  ditalini.hpp  main.cpp
src/utils/: CMakeLists.txt  square.cpp  square.hpp  utils.hpp
test/: CMakeLists.txt  main.cpp  square.cpp
