[build-system]
requires = ["scikit-build-core >= 0.5", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "ditalini"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
editable.rebuild = true